[TUAN]: Add authorize for brand-service